<resources>
    <string name="app_name">MacroScore</string>

    <!-- Header Layout -->
    <string name="header_app_name">MacroScore</string>
    <string name="header_app_logo">App Logo</string>

    <!-- Bottom Menu -->
    <string name="stats">Estadísticas</string>
    <string name="feed">Inicio</string>
    <string name="profile">Perfil</string>

    <!-- Bottom Search Food Menu -->
    <string name="search">Buscar</string>
    <string name="favourites">Favoritos</string>

    <!-- Feed Fragment -->
    <string name="current_date">%1$s,\n%2$d de %3$s</string>
    <string name="add_meal">Añadir comida</string>
    <string name="add_food">Añadir alimento</string>
    <string name="foods_hint">¡Aquí aparecerán tus comidas!</string>

    <!-- Meal Dialog Fragment -->
    <string name="save">Guardar</string>
    <string name="meal_hint">Comidas comunes:</string>
    <string name="meal_name">Nombre de la comida</string>
    <string name="save_meal_for_the_rest_of_days">Guardar para el resto de días</string>
    <string name="breakfast">Desayuno</string>
    <string name="brunch">Almuerzo</string>
    <string name="lunch">Comida</string>
    <string name="afternoon_snack">Merienda</string>
    <string name="dinner">Cena</string>

    <!-- Item Recycler View Feed -->
    <string name="total_kcal">%.2f kcal</string>
    <string name="total_carbs">%.2f\nCarbohidratos</string>
    <string name="total_prots">%.2f\nProteínas</string>
    <string name="total_fats">%.2f\nGrasas</string>

    <!-- Item Recycler View Meal -->
    <string name="kcal_per_100">%.2f kcal</string>
    <string name="carbs_per_100">C: %.2fg</string>
    <string name="prots_per_100">P: %.2fg</string>
    <string name="fats_per_100">G: %.2fg</string>

    <!-- String array Gender -->
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>

    <!-- String array Physical Activity Level -->
    <string name="sedentary">Sedentario</string>
    <string name="light_exercise">Actividad física ligera</string>
    <string name="moderate_exercise">Actividad física moderada</string>
    <string name="hard_exercise">Actividad física intensa</string>
    <string name="physical_job">Actividad física muy intensa</string>

    <!-- Signup Fragment -->
    <string name="signup_title">Regístrate para continuar</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita contraseña</string>
    <string name="next">Continuar</string>
    <string name="or">o bien</string>
    <string name="already_sign_on">¿Ya tienes una cuenta? Inicia sesión</string>

    <!-- Login Fragment -->
    <string name="title_login">Bienvenido de nuevo</string>
    <string name="keep_logged_in">Mantener la sesión inciada</string>
    <string name="login">iniciar sesión</string>
    <string name="doesnt_alredy_signed_on">¿No tienes cuenta? Regístrate aquí</string>

    <!-- Profile Form Fragment -->
    <string name="profile_form_title">Completa tu perfil para continuar</string>
    <string name="gender">Género</string>
    <string name="physical_activity_level">Nivel de actividad física</string>
    <string name="height">Altura (cm)</string>
    <string name="weight">Peso (kg)</string>
    <string name="age">Edad</string>
    <string name="sign_on">Registrarme</string>
    <string name="go_back">Atrás</string>

    <!-- Statistics Fragment -->
    <string name="week_number">Semana %1$d de %2$d</string>
    <string name="week_range">%1$s - %2$s</string>

    <!-- Item Macros Chart -->
    <string name="carbs_summarize">%.2fg/%.2fg\nCarbohidratos</string>
    <string name="prots_summarize">%.2fg/%.2fg\nProteínas</string>
    <string name="fats_summarize">%.2fg/%.2fg\nGrasas</string>

    <!-- Profile Fragment -->
    <string name="centimeters">cm</string>
    <string name="kilograms">kg</string>
    <string name="years">años</string>

    <!-- Edit Profile Bottom Sheet -->
    <string name="title_edit_profile">Editar %s</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_set_food_weight">Establecer cantidad</string>
    <string name="grams">gramos</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>

    <!-- Search Fragment -->
    <string name="quantity">Cantidad</string>

    <!-- Saved Meals Dialog Fragment -->
    <string name="edit_saved">Editar comidas guardadas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>