<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_set_food_weight"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_copy"
        style="@style/Widget.App.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:errorEnabled="false"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:suffixText="@string/grams">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/autocomplete_text_view"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_accept"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/accept"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:backgroundTint="@color/secondaryDark" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/secondaryDark"
        android:textStyle="bold"
        app:strokeColor="@color/secondaryDark" />

</androidx.appcompat.widget.LinearLayoutCompat>