<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".ui.home.feed.meal.MealDialogFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar_meal_dialog"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/text_input_meal_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="8dp"
        android:background="@color/primaryDark"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_close"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:icon="@drawable/ic_close"
            app:iconTint="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:text="@string/add_meal"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/save"
            android:textColor="@color/secondaryDark"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_meal_name"
        style="@style/Widget.App.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_meal_dialog"
        android:layout_marginTop="32dp"
        app:errorEnabled="false"
        android:layout_width="0dp"
        android:hint="@string/meal_name"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_meal_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_box_save_meal"
        app:layout_constraintTop_toBottomOf="@id/text_input_meal_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:text="@string/save_meal_for_the_rest_of_days"
        app:buttonIconTint="@color/white"
        app:buttonTint="@color/secondary"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/montserrat"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_check_box_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/check_box_save_meal"
        app:layout_constraintBottom_toBottomOf="@id/check_box_save_meal"
        app:layout_constraintStart_toEndOf="@id/check_box_save_meal"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_error"
        app:tint="@color/md_theme_light_error"
        android:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_check_box_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/check_box_save_meal"
        app:layout_constraintStart_toStartOf="@id/check_box_save_meal"
        android:text="Ya tienes guardada una comida con ese nombre"
        android:textColor="@color/md_theme_light_error"
        android:fontFamily="@font/montserrat" />

    <TextView
        android:id="@+id/text_view_commons_meals"
        app:layout_constraintTop_toBottomOf="@id/text_view_check_box_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/meal_hint"
        android:textColor="@color/text" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_commons_meals"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="24dp"
        app:strokeColor="@color/secondary"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_breakfast"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/breakfast"
                android:textColor="@color/text"
                app:rippleColor="@color/colorControlHighlight" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="@color/primaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_brunch"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/brunch"
                android:textColor="@color/text"
                app:rippleColor="@color/colorControlHighlight" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="@color/primaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_lunch"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/lunch"
                android:textColor="@color/text"
                app:rippleColor="@color/colorControlHighlight" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="@color/primaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_afternoon_snack"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/afternoon_snack"
                android:textColor="@color/text"
                app:rippleColor="@color/colorControlHighlight" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="@color/primaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dinner"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/dinner"
                android:textColor="@color/text"
                app:rippleColor="@color/colorControlHighlight" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_loading"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:indeterminate="true"
        android:src="@drawable/ic_animated_logo"
        android:tint="@color/secondaryDark"
        android:visibility="invisible"
        app:indicatorColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>